Nuevo texo limpieza

--- a/src/app/pages/partes-lim/partes-lim-detalle/partes-lim-detalle.component.html
+++ b/src/app/pages/partes-lim/partes-lim-detalle/partes-lim-detalle.component.html
@@ -258,6 +258,13 @@
             >
                 DESS
             </button>
+            <button
+                type="button"
+                (click)="setAccesoRapido(15)"
+                class="btn btn-primary"
+            >
+                BASICO
+            </button>
         </div>
         <div class="form-group">
             <div><label for="observacion_ayto">Ayuntamiento</label></div>
