--- a/src/app/core/dash/top-bar/top-bar.component.html
+++ b/src/app/core/dash/top-bar/top-bar.component.html
@@ -1,58 +1,161 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark noprint">
     <a class="navbar-brand" [routerLink]="['/']">EPLAYAS</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-        aria-expanded="false" aria-label="Toggle navigation">
+    <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+    >
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">                                                  
+        <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/dash/limpieza']" routerLinkActive="active">Limpieza</a>
+                <a
+                    class="nav-link"
+                    [routerLink]="['/dash/limpieza']"
+                    routerLinkActive="active"
+                    >Limpieza</a
+                >
             </li>
             <li class="nav-item">
-                    <a class="nav-link" [routerLink]="['/dash/mantenimiento']" routerLinkActive="active">Mantenimiento</a>
-                </li>               
+                <a
+                    class="nav-link"
+                    [routerLink]="['/dash/mantenimiento']"
+                    routerLinkActive="active"
+                    >Mantenimiento</a
+                >
+            </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="navbarDropdownMenuLink"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                >
                     Asistencia
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" [routerLink]="['/dash/asistencia/entrada']">Entradas</a>
-                    <a class="dropdown-item" [routerLink]="['/dash/asistencia/seguimiento']">Seguimiento</a>
-                    <a class="dropdown-item" [routerLink]="['/dash/asistencia/acumulado']">Acumulado</a>
+                <div
+                    class="dropdown-menu"
+                    aria-labelledby="navbarDropdownMenuLink"
+                >
+                    <a
+                        class="dropdown-item"
+                        [routerLink]="['/dash/asistencia/entrada']"
+                        >Entradas</a
+                    >
+                    <a
+                        class="dropdown-item"
+                        [routerLink]="['/dash/asistencia/seguimiento']"
+                        >Seguimiento</a
+                    >
+                    <a
+                        class="dropdown-item"
+                        [routerLink]="['/dash/asistencia/acumulado']"
+                        >Acumulado</a
+                    >
                 </div>
-            </li>             
+            </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="navbarDropdownMenuLink"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                >
                     Hamacas
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" [routerLink]="['/dash/hamacas']">Hamacas</a>
-                    <a class="dropdown-item" [routerLink]="['/dash/hamacas/historico']">Historico</a>                    
+                <div
+                    class="dropdown-menu"
+                    aria-labelledby="navbarDropdownMenuLink"
+                >
+                    <a class="dropdown-item" [routerLink]="['/dash/hamacas']"
+                        >Hamacas</a
+                    >
+                    <a
+                        class="dropdown-item"
+                        [routerLink]="['/dash/hamacas/historico']"
+                        >Historico</a
+                    >
                 </div>
-            </li>    
+            </li>
             <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Estadisticas
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" [routerLink]="['/dash/informeslimpieza']" routerLinkActive="active">Informes</a>
-                        <a class="dropdown-item" [routerLink]="['/dash/analisis']" routerLinkActive="active">Analisis</a>                                     
-                    </div>
-                </li>                    
+                <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="navbarDropdownMenuLink"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                >
+                    Estadisticas
+                </a>
+                <div
+                    class="dropdown-menu"
+                    aria-labelledby="navbarDropdownMenuLink"
+                >
+                    <a
+                        class="dropdown-item"
+                        [routerLink]="['/dash/informeslimpieza']"
+                        routerLinkActive="active"
+                        >Informes</a
+                    >
+                    <a
+                        class="dropdown-item"
+                        [routerLink]="['/dash/analisis']"
+                        routerLinkActive="active"
+                        >Analisis</a
+                    >
+                </div>
+            </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="navbarDropdownMenuLink"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                >
                     Otros
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" [routerLink]="['/dash/operarios']" routerLinkActive="active">Operarios</a> 
-                    <a class="dropdown-item" [routerLink]="['/dash/incidencias']" routerLinkActive="active">Incidencias</a>                                       
-                    <a class="dropdown-item" [routerLink]="['/dash/taller']">Taller</a>
+                <div
+                    class="dropdown-menu"
+                    aria-labelledby="navbarDropdownMenuLink"
+                >
+                    <a
+                        class="dropdown-item"
+                        [routerLink]="['/dash/operarios']"
+                        routerLinkActive="active"
+                        >Operarios</a
+                    >
+                    <a
+                        class="dropdown-item"
+                        [routerLink]="['/dash/operarios/horario']"
+                        routerLinkActive="active"
+                        >Horario Ope.</a
+                    >
+                    <a
+                        class="dropdown-item"
+                        [routerLink]="['/dash/incidencias']"
+                        routerLinkActive="active"
+                        >Incidencias</a
+                    >
+                    <a class="dropdown-item" [routerLink]="['/dash/taller']"
+                        >Taller</a
+                    >
                 </div>
             </li>
         </ul>
         <form class="form-inline ml-auto">
             <button class="btn btn-danger" (click)="logOut()">Salir</button>
-        </form>           
+        </form>
     </div>
 </nav>
