--- a/src/app/pages/operarios/operarios-detalle/operarios-detalle.component.html
+++ b/src/app/pages/operarios/operarios-detalle/operarios-detalle.component.html
@@ -1,117 +1,174 @@
-<form novalidate [formGroup]="operariosForm" (ngSubmit)="onSubmit(operariosForm)">
-  <div class="form-group">
-    <label for="nombre">
-      Nombre
-    </label>
-    <input
-      type="text"
-      placeholder="Introduce nombre"
-      name="nombre"
-      id="nombre"
-      formControlName="nombre"
-      class="form-control">  
-      <div *ngIf="operariosForm.controls['nombre'].hasError('required') && operariosForm.controls['nombre'].touched" class="alert alert-warning" role="warning">
-        Campo nombre necesario
-      </div>           
-  </div>
-  <div class="form-group">
-    <label for="direccion">
-      Direccion
-    </label>
-    <input
-      type="text"
-      placeholder="Introduce direccion"
-      name="direccion"
-      id="direccion"
-      class="form-control"        
-      formControlName="direccion">
-  </div>
-  <div class="form-group">
-    <label for="telefono">
-      Telefono
-    </label>
-    <input
-      type="text"
-      placeholder="Introduce telefono"
-      name="telefono"
-      id="telefono"
-      formControlName="telefono"
-      class="form-control">
-  </div>
-  <div class="form-group">
-    <label for="puesto">
-      Puesto
-    </label>
-    <input
-      type="text"
-      placeholder="Introduce puesto"
-      name="puesto"
-      formControlName="puesto"
-      id="puesto"
-      class="form-control">
-  </div>
-  <div class="form-group row">
-    <div class="col-sm-2">Es</div>
-    <div class="col-sm-10">
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="checkConductor" formControlName="conductor" name="conductor">
-        <label class="form-check-label" for="checkConductor">
-          Conductor
-        </label>
-      </div>
+<form
+    novalidate
+    [formGroup]="operariosForm"
+    (ngSubmit)="onSubmit(operariosForm)"
+>
+    <div class="form-group">
+        <label for="nombre"> Nombre </label>
+        <input
+            type="text"
+            placeholder="Introduce nombre"
+            name="nombre"
+            id="nombre"
+            formControlName="nombre"
+            class="form-control"
+        />
+        <div
+            *ngIf="
+                operariosForm.controls['nombre'].hasError('required') &&
+                operariosForm.controls['nombre'].touched
+            "
+            class="alert alert-warning"
+            role="warning"
+        >
+            Campo nombre necesario
+        </div>
     </div>
-  </div>    
-  <div class="form-group row">
-    <div class="col-sm-2">Situación actual</div>
-    <div class="col-sm-10">
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="checkActivo" formControlName="activo" name="activo">
-        <label class="form-check-label" for="checkActivo">
-          Activo
-        </label>
-      </div>
+    <div class="form-group">
+        <label for="nif"> NIF / NIE </label>
+        <input
+            type="text"
+            placeholder="Introduce nif / nie"
+            name="nif"
+            id="nif"
+            formControlName="nif"
+            class="form-control"
+        />
     </div>
-  </div>  
-  <div class="form-group">
-    <label for="ultima_alta">
-      Ultima alta
-    </label>
-    <input
-      type="date"
-      placeholder="Introduce fecha"
-      name="ultima_alta"
-      formControlName="ultima_alta"
-      id="ultima_alta"
-      class="form-control">
-  </div>
-  <div class="form-group">
-    <label for="ultima_baja">
-      Ultima baja
-    </label>
-    <input
-      type="date"
-      placeholder="Introduce fecha"
-      name="ultima_baja"
-      formControlName="ultima_baja"
-      id="ultima_baja"
-      class="form-control">
-  </div>  
-  <div class="form-group">
+    <div class="form-group">
+        <label for="direccion"> Direccion </label>
+        <input
+            type="text"
+            placeholder="Introduce direccion"
+            name="direccion"
+            id="direccion"
+            class="form-control"
+            formControlName="direccion"
+        />
+    </div>
+    <div class="form-group">
+        <label for="telefono"> Telefono </label>
+        <input
+            type="text"
+            placeholder="Introduce telefono"
+            name="telefono"
+            id="telefono"
+            formControlName="telefono"
+            class="form-control"
+        />
+    </div>
+    <div class="form-group">
+        <label for="puesto"> Puesto </label>
+        <input
+            type="text"
+            placeholder="Introduce puesto"
+            name="puesto"
+            formControlName="puesto"
+            id="puesto"
+            class="form-control"
+        />
+    </div>
+    <div class="form-group row">
+        <div class="col-sm-2">Es</div>
+        <div class="col-sm-10">
+            <div class="form-check">
+                <input
+                    class="form-check-input"
+                    type="checkbox"
+                    id="checkConductor"
+                    formControlName="conductor"
+                    name="conductor"
+                />
+                <label class="form-check-label" for="checkConductor">
+                    Conductor
+                </label>
+            </div>
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="col-sm-2">Situación actual</div>
+        <div class="col-sm-3">
+            <div class="form-check">
+                <input
+                    class="form-check-input"
+                    type="checkbox"
+                    id="checkHorario"
+                    formControlName="horario"
+                    name="horario"
+                />
+                <label class="form-check-label" for="checkHorario">
+                    Horario
+                </label>
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="form-check">
+                <input
+                    class="form-check-input"
+                    type="checkbox"
+                    id="checkActivo"
+                    formControlName="activo"
+                    name="activo"
+                />
+                <label class="form-check-label" for="checkActivo">
+                    Activo
+                </label>
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="ultima_alta"> Ultima alta </label>
+        <input
+            type="date"
+            placeholder="Introduce fecha"
+            name="ultima_alta"
+            formControlName="ultima_alta"
+            id="ultima_alta"
+            class="form-control"
+        />
+    </div>
+    <div class="form-group">
+        <label for="ultima_baja"> Ultima baja </label>
+        <input
+            type="date"
+            placeholder="Introduce fecha"
+            name="ultima_baja"
+            formControlName="ultima_baja"
+            id="ultima_baja"
+            class="form-control"
+        />
+    </div>
+    <div class="form-group">
+        <div>
+            <label for="observacion">Observación del operario</label>
+        </div>
+        <textarea
+            name="observacion"
+            rows="10"
+            cols="50"
+            class="form-control"
+            id="observacion"
+            formControlName="observacion"
+        >
+        </textarea>
+    </div>
     <div>
-      <label for="observacion">Observación del operario</label>
+        <button
+            type="submit"
+            [disabled]="!operariosForm.valid"
+            class="btn btn-success"
+        >
+            Aceptar
+        </button>
+        <button type="button" (click)="onCancelar()" class="btn btn-warning">
+            Cancelar
+        </button>
+        <button
+            type="button"
+            (click)="onBorrar(operariosForm)"
+            class="btn btn-danger"
+        >
+            BORRAR
+        </button>
     </div>
-    <textarea
-      name="observacion"
-      rows="10"
-      cols="50"
-      class="form-control" 
-      id="observacion"      
-      formControlName="observacion">
-    </textarea>
-</div>     
-  <div>
-    <button type="submit" [disabled]="!operariosForm.valid" class="btn btn-success">Aceptar</button>
-    <button type="button" (click)="onCancelar()" class="btn btn-warning">Cancelar</button>
-    <button type="button" (click)="onBorrar(operariosForm)" class="btn btn-danger">BORRAR</button>
-  </div>
 </form>
