Fix print timetable workers

--- a/src/app/pages/operarios/operarios-horario/operarios-horario.component.html
+++ b/src/app/pages/operarios/operarios-horario/operarios-horario.component.html
@@ -20,11 +20,11 @@
                 REGISTRO DIARIO DE JORNADA TRABAJADORES A TIEMPO COMPLETO
             </p>
             <div class="row">
-                <div class="col-sm font-weight-bold">
+                <div class="col font-weight-bold">
                     {{ operario.nombre | uppercase }}
                 </div>
-                <div class="col-sm font-weight-bold">{{ fechaLabel }}</div>
-                <div class="col-sm font-weight-bold">R.A. BENIDORM, S.L.</div>
+                <div class="col font-weight-bold">{{ fechaLabel }}</div>
+                <div class="col font-weight-bold">R.A. BENIDORM, S.L.</div>
             </div>
 
             <div>
