--- a/src/app/pages/informes-lim/resumen-dia/resumen-dia.component.css
+++ b/src/app/pages/informes-lim/resumen-dia/resumen-dia.component.css
@@ -19,7 +19,7 @@ pre {
     text-align: left;
     display: block;
     unicode-bidi: embed;
-    white-space: pre-line;
+    /* white-space: pre-line; */
 }
 
 .row {
