--- a/src/app/pages/asistencia/cuadrante-as/cuadrante-det.component.html
+++ b/src/app/pages/asistencia/cuadrante-as/cuadrante-det.component.html
@@ -1,6 +1,6 @@
-<p>cuadrante-det works!</p>
-<div class="overflow-auto" style="max-height: 300px;">
-    <table class="table table-striped table-bordered">
+
+<div class="overflow-auto" style="max-height: 600px;">
+    <table class="table table-condensed table-striped table-bordered">
         <thead class="position-sticky top-0 bg-white">
             <tr>
                 <th>Operario</th>
@@ -12,7 +12,7 @@
         <tbody>
             @for (item of cuadrante(); track $index) {
             <tr>
-                <td>{{item.operario}}</td>
+                <td class="text-nowrap">{{item.operario}}</td>
                 @for (dia of item.dias; track $index) {
                 <td [style.background-color]="dia.color">{{dia.estado}}</td>
                 }
@@ -20,4 +20,4 @@
             }
         </tbody>
     </table>
-</div>
+</div>    
