--- a/src/app/pages/asistencia/cuadrante-as/cuadrante-as.component.html
+++ b/src/app/pages/asistencia/cuadrante-as/cuadrante-as.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row align-items-end">
   <div class="form-group col-md-3">
     <label for="fechai">Desde fecha</label>
     <input id="fechai" type="date" name="fechai" placeholder="dia inicial" [(ngModel)]="fechai" class="form-control">
@@ -7,7 +7,7 @@
     <label for="fechaf">Hasta fecha</label>
     <input id="fechaf" type="date" name="fechaf" placeholder="dia final" [(ngModel)]="fechaf" class="form-control">
   </div>
-  <div class="form-group col">
+  <div class="form-group col-md-3">
     <button type="button" class="btn btn-primary" (click)="datosCuadrante()">
       Cuadrante
     </button>
