--- a/src/app/core/dash/top-bar/top-bar.component.html
+++ b/src/app/core/dash/top-bar/top-bar.component.html
@@ -38,7 +38,7 @@
                     aria-haspopup="true"
                     aria-expanded="false"
                 >
-                    Asistencia
+                    Taller
                 </a>
                 <div
                     class="dropdown-menu"
@@ -46,24 +46,20 @@
                 >
                     <a
                         class="dropdown-item"
-                        [routerLink]="['/dash/asistencia/entrada']"
-                        >Entradas</a
-                    >
+                        [routerLink]="['/dash/taller/km']"
+                        >KM</a>
                     <a
                         class="dropdown-item"
-                        [routerLink]="['/dash/asistencia/seguimiento']"
-                        >Seguimiento</a
-                    >
+                        [routerLink]="['/dash/taller']"
+                        >Vehiculos</a>
                     <a
                         class="dropdown-item"
-                        [routerLink]="['/dash/asistencia/acumulado']"
-                        >Acumulado</a
-                    >
+                        [routerLink]="['/dash/taller/km']"
+                        >ITV</a>
                     <a
                         class="dropdown-item"
-                        [routerLink]="['/dash/asistencia/cuadrante']"
-                        >Cuadrante</a
-                    >                    
+                        [routerLink]="['/dash/taller/km']"
+                        >Revisiones</a>                  
                 </div>
             </li>
             <li class="nav-item dropdown">
